--- a/k8s/dev/manifests/storage/persistent-volume-claim.yaml
+++ b/k8s/dev/manifests/storage/persistent-volume-claim.yaml
@@ -5,7 +5,7 @@ metadata:
 spec:
   accessModes:
     - ReadWriteOnce
-  storageClassName: local-path
   resources:
     requests:
       storage: 10Gi
+  volumeName: weaviate-pv
