chore: updated structure and simplified bash file

--- a/k8s/dev/manifests/kustomization.yaml
+++ b/k8s/dev/manifests/kustomization.yaml
@@ -11,3 +11,4 @@ resources:
   - services/service-i2v-neural.yaml
   - pods/pod-weaviate-ui.yaml
   - services/service-weaviate-ui.yaml
+  - networks/ingress.yaml
