--- a/k8s/dev/manifests/services/service-weaviate-ui.yaml
+++ b/k8s/dev/manifests/services/service-weaviate-ui.yaml
@@ -3,11 +3,10 @@ kind: Service
 metadata:
   name: weaviate-ui
 spec:
-  type: NodePort
+  type: ClusterIP
   selector:
     app: weaviate-ui
   ports:
   - protocol: TCP
     port: 3000
     targetPort: 7777
-    nodePort: 30077
