--- a/k8s/prod/manifests/services/service-weaviate.yaml
+++ b/k8s/prod/manifests/services/service-weaviate.yaml
@@ -3,13 +3,17 @@ kind: Service
 metadata:
   name: weaviate
 spec:
-  type: ClusterIP
+  type: NodePort
   selector:
     app: weaviate
   ports:
-  - protocol: TCP
-    port: 8080
-    targetPort: 8080
-  - protocol: TCP
-    port: 50051
-    targetPort: 50051
+    - protocol: TCP
+      name: http
+      port: 8080
+      targetPort: 8080
+      nodePort: 30080
+    - protocol: TCP
+      name: grpc
+      port: 50051
+      targetPort: 50051
+      nodePort: 30051
